--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "**/*.stub.ts",
     "**/*.spec.ts",
     "node_modules",
-    "lib"
+    "lib",
+    ".local"
   ],
   "compilerOptions": {
     "target": "es2022",
