--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "@refractedlabs/utils",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "description": "Common utilities for logging and configuration",
-  "author": "amin <amin@prismprotocol.app>",
+  "author": "amin <amin@refractedlabs.com>",
   "homepage": "https://github.com/refractedlabs/utils",
-  "license": "GPL Version 2.0 or a later version",
+  "license" : "SEE LICENSE IN LICENSE.md",
   "scripts": {
     "compile": "rm -rf lib/* && tsc"
   },
-  "licenses": [
-    {
-      "type": "GPL Version 2.0 or a later version",
-      "url": "https://github.com/prism-finance/prism-contracts/blob/main/LICENSE.md"
-    }
-  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "lib/**/*"
+    "lib/**/*",
+    "LICENSE.md"
   ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
