--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@refractedlabs/utils",
-  "version": "0.1.9",
+  "version": "0.2.4",
   "description": "Common utilities for logging and configuration",
   "author": "amin <amin@refractedlabs.com>",
   "homepage": "https://github.com/refractedlabs/utils",
-  "license" : "SEE LICENSE IN LICENSE.md",
+  "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
     "compile": "rm -rf lib/* && tsc"
   },
@@ -23,9 +23,11 @@
     "url": "https://github.com/refractedlabs/utils"
   },
   "dependencies": {
+    "@cosmjs/encoding": "0.31.3",
     "@cosmjs/json-rpc": "0.31.0",
     "@cosmjs/socket": "0.31.0",
     "@types/js-yaml": "^4.0.5",
+    "jackson-js": "^1.1.0",
     "js-yaml": "^4.1.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1",
