feat: add gas price and file content modification utilities and add cosmjs dependencies
CU-86bwtx9gn

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@refractedlabs/utils",
-  "version": "0.2.4",
-  "description": "Common utilities for logging and configuration",
+  "version": "0.3.1",
+  "description": "Common utilities for logging, configuration, and cosmos clients",
   "author": "amin <amin@refractedlabs.com>",
   "homepage": "https://github.com/refractedlabs/utils",
   "license": "SEE LICENSE IN LICENSE.md",
@@ -23,9 +23,14 @@
     "url": "https://github.com/refractedlabs/utils"
   },
   "dependencies": {
-    "@cosmjs/encoding": "0.31.3",
-    "@cosmjs/json-rpc": "0.31.0",
-    "@cosmjs/socket": "0.31.0",
+    "@cosmjs/amino": "0.32.1",
+    "@cosmjs/proto-signing": "0.32.1",
+    "@cosmjs/stargate": "0.32.1",
+    "@cosmjs/tendermint-rpc": "0.32.1",
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "@improbable-eng/grpc-web-node-http-transport": "^0.15.0",
+    "@refractedlabs/cosmology-lcd-fork": "0.13.3",
+    "browser-headers": "^0.4.1",
     "@types/js-yaml": "^4.0.5",
     "jackson-js": "^1.1.0",
     "js-yaml": "^4.1.0",
