--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refractedlabs/utils",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "Common utilities for logging, configuration, and cosmos clients",
   "author": "amin <amin@refractedlabs.com>",
   "homepage": "https://github.com/refractedlabs/utils",
@@ -23,22 +23,19 @@
     "url": "https://github.com/refractedlabs/utils"
   },
   "dependencies": {
-    "@cosmjs/amino": "0.32.2",
-    "@cosmjs/proto-signing": "0.32.2",
-    "@cosmjs/stargate": "0.32.2",
-    "@cosmjs/tendermint-rpc": "0.32.2",
-    "@improbable-eng/grpc-web": "^0.15.0",
-    "@improbable-eng/grpc-web-node-http-transport": "^0.15.0",
-    "@refractedlabs/cosmology-lcd-fork": "0.13.3",
-    "@types/js-yaml": "^4.0.5",
-    "browser-headers": "^0.4.1",
-    "jackson-js": "^1.1.0",
     "js-yaml": "^4.1.0",
+    "jackson-js": "^1.1.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1",
-    "winston-syslog": "^2.7.0"
+    "winston-syslog": "^2.7.0",
+    "@cosmjs/encoding": "0.32.2",
+    "@cosmjs/socket": "0.32.2",
+    "@cosmjs/json-rpc": "0.32.2",
+    "xstream": "11.14.0",
+    "@protobufjs/eventemitter": "1.1.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
