chore: change registry url in publish config
CU-86bzgx1p9

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "LICENSE.md"
   ],
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com",
-    "access": "restricted"
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   },
   "repository": {
     "type": "git",
