--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.0",
   "description": "Common utilities for logging, configuration, and cosmos clients",
   "author": "amin <amin@refractedlabs.com>",
-  "homepage": "https://github.com/refractedlabs/utils",
+  "packageManager": "^pnpm@9.1.2""homepage": "https://github.com/refractedlabs/utils",
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
     "compile": "rm -rf lib/* && tsc"
